[Update] User should be notified of any invalid inputs

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="container">
         <form class="container__form">
             <h2 class="container__form__title">JS Input Validation</h2>
-            <input class="container__form__input" type="text">
-            <p class="container__form__error-msg"></p>
+            <input class="container__form__input" type="text" required>
+            <p class="container__form__error-msg hidden"></p>
             <div class="container__form__buttons">
                 <button class="container__form__buttons__submit" type="submit">Submit</button>
             </div>
