--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
             </div>
         </form>
     </div>
+    <div class="modal hidden">
+        <div class="modal__content">
+            <h3 class="modal__content__title">Congratulation! You have passed the JS Validation Regex</h3>
+            <p class="modal__content__desc">You can exit now</p>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
